# j48-python-backend

./: .gitignore  DATA_AVAILABILITY.md  LICENSE  PAPER_REPRODUCTION.md  README.md  REPRODUCIBILITY.md  TECHNICAL_OVERVIEW.md  pyproject.toml
j48/: J48_ACCEPTANCE_CRITERIA.md  J48_EXTENDED_VALIDATION_BATTERY.md  J48_FAST_CODE_AUDIT.md  J48_FAST_CURRENT_CHECKLIST.md  J48_FAST_EA_PROFILE_TUNING.md  J48_FAST_FAST014_DESIGN.md  J48_FAST_OPTIMIZATION_BACKLOG.md  J48_FAST_ROADMAP.md  J48_FAST_VALIDATION_PLAN.md  J48_FAST_VALIDATION_RESULTS.md  J48_STRICT_FREEZE.md  J48_SYNTHETIC_EDGE_BATTERY.md  J48_SYNTHETIC_EXPANDED_PLAN.md  J48_SYNTHETIC_EXPANDED_RESULTS.md  J48_WEKA_CLOSURE_BACKLOG.md  PHASE1_STATUS.md  README.md  __init__.py  acceptance_analysis.py  core.py  engine.py  sklearn_api.py
